<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="com.addd.nextformatchat.activities.RegistrationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarRegistration"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </android.support.design.widget.AppBarLayout>
    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/login"
        android:textColor="@color/white"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/last_name"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginBottom="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
